<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="ok">OK</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="download_image">download image</string>
    <string name="others">Others</string>
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp">LoadApp - Current repository by udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for android and JAVA by SQUARE,Inc</string>
    <string name="msg_no_option">Please selected the file to Download</string>
    <string name="invalid_url">Please check the URL</string>
    <string name="download">Download</string>
</resources>
