<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.MainActivity"
    tools:showIn="@layout/activity_main">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.udacity.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motion_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutDescription="@xml/motion_main"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/download_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/download_height"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/download_image"
                app:srcCompat="@drawable/ic_baseline_cloud_download_24" />

        </androidx.constraintlayout.motion.widget.MotionLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/motion_layout">

            <RadioButton
                android:id="@+id/glide_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.loadGlideURL()}"
                android:padding="@dimen/default_margin"
                android:text="@string/glide" />

            <RadioButton
                android:id="@+id/loadapp_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.loadAppURL()}"
                android:padding="@dimen/default_margin"
                android:text="@string/loadapp" />

            <RadioButton
                android:id="@+id/retrofit_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.loadRetrofitURL()}"
                android:padding="@dimen/default_margin"
                android:text="@string/retrofit" />

            <RadioButton
                android:id="@+id/others_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.loadOthers()}"
                android:padding="@dimen/default_margin"
                android:text="@string/others"
                tools:checked="true" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/other_inputlayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/others"
            android:visibility="@{viewModel.eventHideOthers ? View.VISIBLE:View.GONE}"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/other_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.othersUrl}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.udacity.components.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            android:onClick="@{()->viewModel.initDownload()}"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/guideline" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>